--- a/eTools Ultimate/Resources/Translations.resx
+++ b/eTools Ultimate/Resources/Translations.resx
@@ -460,4 +460,7 @@
   <data name="Update check failed" xml:space="preserve">
     <value />
   </data>
+  <data name="Search..." xml:space="preserve">
+    <value />
+  </data>
 </root>
