--- a/eTools Ultimate/Resources/Translations.de-DE.resx
+++ b/eTools Ultimate/Resources/Translations.de-DE.resx
@@ -2020,4 +2020,31 @@
   <data name="Error saving giftboxes" type="System.Resources.ResXNullRef, System.Windows.Forms">
     <value />
   </data>
+  <data name="Remove an accessory" type="System.Resources.ResXNullRef, System.Windows.Forms">
+    <value />
+  </data>
+  <data name="Are you sure you want to remove the accessory {0} ?" type="System.Resources.ResXNullRef, System.Windows.Forms">
+    <value />
+  </data>
+  <data name="Remove an accessory's level" type="System.Resources.ResXNullRef, System.Windows.Forms">
+    <value />
+  </data>
+  <data name="Are you sure you want to remove the level {0} from the accessory {1} ?" type="System.Resources.ResXNullRef, System.Windows.Forms">
+    <value />
+  </data>
+  <data name="Remove an attribute from an accessory’s level" type="System.Resources.ResXNullRef, System.Windows.Forms">
+    <value />
+  </data>
+  <data name="Are you sure you want to remove the attribute {0} from the level {1} of the accessory {2}?" type="System.Resources.ResXNullRef, System.Windows.Forms">
+    <value />
+  </data>
+  <data name="Accessories saved" type="System.Resources.ResXNullRef, System.Windows.Forms">
+    <value />
+  </data>
+  <data name="Accessories have been successfully saved." type="System.Resources.ResXNullRef, System.Windows.Forms">
+    <value />
+  </data>
+  <data name="Error saving accessories" type="System.Resources.ResXNullRef, System.Windows.Forms">
+    <value />
+  </data>
 </root>
