--- a/eTools Ultimate/Resources/Translations.resx
+++ b/eTools Ultimate/Resources/Translations.resx
@@ -505,4 +505,19 @@
   <data name="Error saving accessories" xml:space="preserve">
     <value />
   </data>
+  <data name="Remove a text" xml:space="preserve">
+    <value />
+  </data>
+  <data name="Are you sure you want to remove the text {0} ?" xml:space="preserve">
+    <value />
+  </data>
+  <data name="Texts saved" xml:space="preserve">
+    <value />
+  </data>
+  <data name="Texts have been successfully saved." xml:space="preserve">
+    <value />
+  </data>
+  <data name="Error saving texts" xml:space="preserve">
+    <value />
+  </data>
 </root>
