--- a/eTools Ultimate/Resources/Translations.fr-FR.resx
+++ b/eTools Ultimate/Resources/Translations.fr-FR.resx
@@ -430,6 +430,63 @@
   <data name="Search..." xml:space="preserve">
     <value>Rechercher...</value>
   </data>
+  <data name="Remove giftbox item" xml:space="preserve">
+    <value>Supprimer l'objet d'une boîte-cadeau</value>
+  </data>
+  <data name="Are you sure you want to remove the item {0} from the giftbox {1} ?" xml:space="preserve">
+    <value>Êtes-vous sûr de vouloir supprimer l'objet {0} de la boîte-cadeau {1} ?</value>
+  </data>
+  <data name="Giftboxes saved" xml:space="preserve">
+    <value>Boîtes-cadeaux sauvegardées</value>
+  </data>
+  <data name="Giftboxes have been successfully saved." xml:space="preserve">
+    <value>Les boîtes-cadeaux ont été sauvegardées avec succès.</value>
+  </data>
+  <data name="Error saving giftboxes" xml:space="preserve">
+    <value>Erreur de sauvegarde des boîtes-cadeaux</value>
+  </data>
+  <data name="Remove an accessory" xml:space="preserve">
+    <value>Supprimer un accessoire</value>
+  </data>
+  <data name="Are you sure you want to remove the accessory {0} ?" xml:space="preserve">
+    <value>Êtes-vous sûr de vouloir supprimer l'accessoire {0} ?</value>
+  </data>
+  <data name="Remove an accessory's level" xml:space="preserve">
+    <value>Supprimer le niveau d'un accessoire</value>
+  </data>
+  <data name="Are you sure you want to remove the level {0} from the accessory {1} ?" xml:space="preserve">
+    <value>Êtes-vous sûr de vouloir supprimer le niveau {0} de l'accessoire {1} ?</value>
+  </data>
+  <data name="Remove an attribute from an accessory’s level" xml:space="preserve">
+    <value>Supprimer l'attribut du niveau d'un accessoire</value>
+  </data>
+  <data name="Are you sure you want to remove the attribute {0} from the level {1} of the accessory {2}?" xml:space="preserve">
+    <value>Êtes-vous sûr de vouloir supprimer l'attribut {0} du niveau {1} de l'accessoire {2} ?</value>
+  </data>
+  <data name="Accessories saved" xml:space="preserve">
+    <value>Accessoires sauvegardés</value>
+  </data>
+  <data name="Accessories have been successfully saved." xml:space="preserve">
+    <value>Les accessoires ont été sauvegardés avec succès.</value>
+  </data>
+  <data name="Error saving accessories" xml:space="preserve">
+    <value>Erreur de sauvegarde des accessoires</value>
+  </data>
+  <data name="Remove a text" xml:space="preserve">
+    <value>Supprimer un texte</value>
+  </data>
+  <data name="Are you sure you want to remove the text {0} ?" xml:space="preserve">
+    <value>Êtes-vous sûr de vouloir supprimer le texte {0} ?</value>
+  </data>
+  <data name="Texts saved" xml:space="preserve">
+    <value>Textes sauvegardés</value>
+  </data>
+  <data name="Texts have been successfully saved." xml:space="preserve">
+    <value>Les textes ont été sauvegardés avec succès.</value>
+  </data>
+  <data name="Error saving texts" xml:space="preserve">
+    <value>Erreur de sauvegarde des textes</value>
+  </data>
   <data name="Welcome" xml:space="preserve">
     <value>Bienvenue</value>
     <comment>Welcome text on dashboard</comment>
@@ -2004,61 +2061,13 @@
   <data name="eTools Ultimate is a powerful editor for editing Flyff resource files." xml:space="preserve">
     <value>eTools Ultimate est un éditeur puissant pour l'édition de fichiers de ressources Flyff.</value>
   </data>
-  <data name="Remove giftbox item" xml:space="preserve">
-    <value>Supprimer l'objet d'une boîte-cadeau</value>
+  <data name="Add giftbox" xml:space="preserve">
+    <value>Ajouter une boîte-cadeau</value>
   </data>
-  <data name="Are you sure you want to remove the item {0} from the giftbox {1} ?" xml:space="preserve">
-    <value>Êtes-vous sûr de vouloir supprimer l'objet {0} de la boîte-cadeau {1} ?</value>
+  <data name="Remove giftbox" xml:space="preserve">
+    <value>Supprimer une boîte-cadeau</value>
   </data>
-  <data name="Giftboxes saved" xml:space="preserve">
-    <value>Boîtes-cadeaux sauvegardées</value>
-  </data>
-  <data name="Giftboxes have been successfully saved." xml:space="preserve">
-    <value>Les boîtes-cadeaux ont été sauvegardées avec succès.</value>
-  </data>
-  <data name="Error saving giftboxes" xml:space="preserve">
-    <value>Erreur de sauvegarde des boîtes-cadeaux</value>
-  </data>
-  <data name="Remove an accessory" xml:space="preserve">
-    <value>Supprimer un accessoire</value>
-  </data>
-  <data name="Are you sure you want to remove the accessory {0} ?" xml:space="preserve">
-    <value>Êtes-vous sûr de vouloir supprimer l'accessoire {0} ?</value>
-  </data>
-  <data name="Remove an accessory's level" xml:space="preserve">
-    <value>Supprimer le niveau d'un accessoire</value>
-  </data>
-  <data name="Are you sure you want to remove the level {0} from the accessory {1} ?" xml:space="preserve">
-    <value>Êtes-vous sûr de vouloir supprimer le niveau {0} de l'accessoire {1} ?</value>
-  </data>
-  <data name="Remove an attribute from an accessory’s level" xml:space="preserve">
-    <value>Supprimer l'attribut du niveau d'un accessoire</value>
-  </data>
-  <data name="Are you sure you want to remove the attribute {0} from the level {1} of the accessory {2}?" xml:space="preserve">
-    <value>Êtes-vous sûr de vouloir supprimer l'attribut {0} du niveau {1} de l'accessoire {2} ?</value>
-  </data>
-  <data name="Accessories saved" xml:space="preserve">
-    <value>Accessoires sauvegardés</value>
-  </data>
-  <data name="Accessories have been successfully saved." xml:space="preserve">
-    <value>Les accessoires ont été sauvegardés avec succès.</value>
-  </data>
-  <data name="Error saving accessories" xml:space="preserve">
-    <value>Erreur de sauvegarde des accessoires</value>
-  </data>
-  <data name="Remove a text" xml:space="preserve">
-    <value>Supprimer un texte</value>
-  </data>
-  <data name="Are you sure you want to remove the text {0} ?" xml:space="preserve">
-    <value>Êtes-vous sûr de vouloir supprimer le texte {0} ?</value>
-  </data>
-  <data name="Texts saved" xml:space="preserve">
-    <value>Textes sauvegardés</value>
-  </data>
-  <data name="Texts have been successfully saved." xml:space="preserve">
-    <value>Les textes ont été sauvegardés avec succès.</value>
-  </data>
-  <data name="Error saving texts" xml:space="preserve">
-    <value>Erreur de sauvegarde des textes</value>
+  <data name="Are you sure you want to remove the giftbox {0} ?" xml:space="preserve">
+    <value>Êtes-vous sûr de vouloir supprimer la boîte-cadeau {0} ?</value>
   </data>
 </root>
