--- a/eTools Ultimate/Resources/Translations.resx
+++ b/eTools Ultimate/Resources/Translations.resx
@@ -520,4 +520,13 @@
   <data name="Error saving texts" xml:space="preserve">
     <value />
   </data>
+  <data name="Add giftbox" xml:space="preserve">
+    <value />
+  </data>
+  <data name="Remove giftbox" xml:space="preserve">
+    <value />
+  </data>
+  <data name="Are you sure you want to remove the giftbox {0} ?" xml:space="preserve">
+    <value />
+  </data>
 </root>
