Update patch notes and add 'Create giftbox' localization
Replaced test and legacy patch note entries with a new '0.1.0 (Alpha)' entry in all supported languages. Added 'Create giftbox' translation to resource files and updated the GiftboxesPage button to use the new localized string.

--- a/eTools Ultimate/Resources/Translations.de-DE.resx
+++ b/eTools Ultimate/Resources/Translations.de-DE.resx
@@ -2071,6 +2071,10 @@
   <data name="Are you sure you want to remove the giftbox {0} ?" type="System.Resources.ResXNullRef, System.Windows.Forms">
     <value />
   </data>
+  <data name="Create giftbox" xml:space="preserve">
+    <value>Giftbox erstellen</value>
+    <comment>Button text for creating a new giftbox</comment>
+  </data>
   <data name="Motion Editor" xml:space="preserve">
     <value>Bewegungs-Editor</value>
   </data>
