--- a/eTools Ultimate/Resources/PatchNotes.resx
+++ b/eTools Ultimate/Resources/PatchNotes.resx
@@ -1,6 +1,64 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
+  <!-- 
+    Microsoft ResX Schema 
+    
+    Version 2.0
+    
+    The primary goals of this format is to allow a simple XML format 
+    that is mostly human readable. The generation and parsing of the 
+    various data types are done through the TypeConverter classes 
+    associated with the data types.
+    
+    Example:
+    
+    ... ado.net/XML headers & schema ...
+    <resheader name="resmimetype">text/microsoft-resx</resheader>
+    <resheader name="version">2.0</resheader>
+    <resheader name="reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
+    <resheader name="writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
+    <data name="Name1"><value>this is my long string</value><comment>this is a comment</comment></data>
+    <data name="Color1" type="System.Drawing.Color, System.Drawing">Blue</data>
+    <data name="Bitmap1" mimetype="application/x-microsoft.net.object.binary.base64">
+        <value>[base64 mime encoded serialized .NET Framework object]</value>
+    </data>
+    <data name="Icon1" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+        <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
+        <comment>This is a comment</comment>
+    </data>
+                
+    There are any number of "resheader" rows that contain simple 
+    name/value pairs.
+    
+    Each data row contains a name, and value. The row also contains a 
+    type or mimetype. Type corresponds to a .NET class that support 
+    text/value conversion through the TypeConverter architecture. 
+    Classes that don't support this are serialized and stored with the 
+    mimetype set.
+    
+    The mimetype is used for serialized objects, and tells the 
+    ResXResourceReader how to depersist the object. This is currently not 
+    extensible. For a given mimetype the value must be set accordingly:
+    
+    Note - application/x-microsoft.net.object.binary.base64 is the format 
+    that the ResXResourceWriter will generate, however the reader can 
+    read any of the formats listed below.
+    
+    mimetype: application/x-microsoft.net.object.binary.base64
+    value   : The object must be serialized with 
+            : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
+            : and then encoded with base64 encoding.
+    
+    mimetype: application/x-microsoft.net.object.soap.base64
+    value   : The object must be serialized with 
+            : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
+            : and then encoded with base64 encoding.
 
+    mimetype: application/x-microsoft.net.object.bytearray.base64
+    value   : The object must be serialized into a byte array 
+            : using a System.ComponentModel.TypeConverter
+            : and then encoded with base64 encoding.
+    -->
   <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
     <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
     <xsd:element name="root" msdata:IsDataSet="true">
@@ -60,6 +118,6 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Version_0_1_0" xml:space="preserve">
-    <value>{"version":"0.1.0 (Alpha)","date":"2025-10-02","developerText":"Welcome to the public Alpha of eTools Ultimate! This early version focuses on core editors and a modern UI foundation. Expect rapid changes and frequent improvements while we gather your feedback.","imagePath":"/Assets/Icons/PersonalizationIcon.png","categories":{"added":[{"text":"Dashboard with quick navigation and localized UI","type":0},{"text":"Editors: Movers, Motions, Giftboxes, Accessories, Texts","type":0},{"text":"Search, filtering and two-pane layouts across editors","type":0},{"text":"Internationalization (English, German, French)","type":0},{"text":"Settings pages: Configuration, Personalization, About","type":0},{"text":"Update checker with GitHub integration","type":0}],"changed":[{"text":"Unified UI styling (light/dark/high contrast)","type":1},{"text":"Consistent buttons (Undo, Redo, Save, Add, Delete, Expert)","type":1}],"improved":[{"text":"Faster loading and smoother lists with virtualization","type":4},{"text":"Clearer forms with grouped sections and tooltips","type":4}],"fixed":[{"text":"General stability fixes in data loading and bindings","type":3}]} }</value>
+    <value>{"version":"0.1.0 (Alpha)","date":"2025-10-02","developerText":"Welcome to the public Alpha of eTools Ultimate! This early version focuses on core editors and a modern UI foundation. Expect rapid changes and frequent improvements while we gather your feedback.","imagePath":"/Assets/Icons/PersonalizationIcon.png","categories":{"added":[{"text":"Dashboard with quick navigation and localized UI","type":0},{"text":"Editors: Movers, Motions, Giftboxes, Accessories, Texts","type":0},{"text":"Search, add, remove and save","type":0},{"text":"Internationalization (English, German, French)","type":0},{"text":"Themes (light, dark, high contrast","type":0},{"text":"Settings pages: Configuration, Personalization, About","type":0},{"text":"Update checker with GitHub integration","type":0}],"changed":[{"text":"Unified UI styling (light/dark/high contrast)","type":1},{"text":"Consistent buttons (Undo, Redo, Save, Add, Delete, Expert)","type":1}],"improved":[{"text":"Faster loading and smoother lists with virtualization","type":4},{"text":"Clearer forms with grouped sections and tooltips","type":4}],"fixed":[{"text":"General stability fixes in data loading and bindings","type":3}]} }</value>
   </data>
 </root>
