--- a/eTools Ultimate/Resources/Translations.de-DE.resx
+++ b/eTools Ultimate/Resources/Translations.de-DE.resx
@@ -410,11 +410,11 @@
   <data name="ID of the mover" type="System.Resources.ResXNullRef, System.Windows.Forms">
     <value />
   </data>
-  <data name="Motion" type="System.Resources.ResXNullRef, System.Windows.Forms">
-    <value />
+  <data name="Motion" xml:space="preserve">
+    <value>Bewegung</value>
   </data>
-  <data name="Motion of the character mover that should be played." type="System.Resources.ResXNullRef, System.Windows.Forms">
-    <value />
+  <data name="Motion of the character mover that should be played." xml:space="preserve">
+    <value>Bewegung des Charakter-Movers, die abgespielt werden soll.</value>
   </data>
   <data name="Text" type="System.Resources.ResXNullRef, System.Windows.Forms">
     <value />
@@ -487,6 +487,19 @@
   </data>
   <data name="Error saving texts" type="System.Resources.ResXNullRef, System.Windows.Forms">
     <value />
+  </data>
+  <data name="Add giftbox" type="System.Resources.ResXNullRef, System.Windows.Forms">
+    <value />
+  </data>
+  <data name="Remove giftbox" type="System.Resources.ResXNullRef, System.Windows.Forms">
+    <value />
+  </data>
+  <data name="Are you sure you want to remove the giftbox {0} ?" type="System.Resources.ResXNullRef, System.Windows.Forms">
+    <value />
+  </data>
+  <data name="Create giftbox" xml:space="preserve">
+    <value>Giftbox erstellen</value>
+    <comment>Button text for creating a new giftbox</comment>
   </data>
   <data name="Welcome" xml:space="preserve">
     <value>Willkommen</value>
@@ -2062,19 +2075,6 @@
   <data name="eTools Ultimate is a powerful editor for editing Flyff resource files." xml:space="preserve">
     <value>eTools Ultimate ist ein leistungsstarker Editor zum Bearbeiten von Flyff-Ressourcendateien.</value>
   </data>
-  <data name="Add giftbox" type="System.Resources.ResXNullRef, System.Windows.Forms">
-    <value />
-  </data>
-  <data name="Remove giftbox" type="System.Resources.ResXNullRef, System.Windows.Forms">
-    <value />
-  </data>
-  <data name="Are you sure you want to remove the giftbox {0} ?" type="System.Resources.ResXNullRef, System.Windows.Forms">
-    <value />
-  </data>
-  <data name="Create giftbox" xml:space="preserve">
-    <value>Giftbox erstellen</value>
-    <comment>Button text for creating a new giftbox</comment>
-  </data>
   <data name="Motion Editor" xml:space="preserve">
     <value>Bewegungs-Editor</value>
   </data>
@@ -2083,12 +2083,6 @@
   </data>
   <data name="Unique identifier for the motion" xml:space="preserve">
     <value>Eindeutiger Bezeichner der Bewegung</value>
-  </data>
-  <data name="Motion" xml:space="preserve">
-    <value>Bewegung</value>
-  </data>
-  <data name="Motion of the character mover that should be played." xml:space="preserve">
-    <value>Bewegung des Charakter-Movers, die abgespielt werden soll.</value>
   </data>
   <data name="Description of the motion" xml:space="preserve">
     <value>Beschreibung der Bewegung</value>
@@ -2149,5 +2143,8 @@
   </data>
   <data name="Text displayed in game" xml:space="preserve">
     <value>Im Spiel angezeigter Text</value>
+  </data>
+  <data name="Latest updates and improvements" xml:space="preserve">
+    <value>Neueste Updates und Verbesserungen</value>
   </data>
 </root>
