--- a/eTools Ultimate/Resources/Translations.resx
+++ b/eTools Ultimate/Resources/Translations.resx
@@ -536,4 +536,7 @@
   <data name="Latest updates and improvements" xml:space="preserve">
     <value />
   </data>
+  <data name="Files format" xml:space="preserve">
+    <value />
+  </data>
 </root>
