--- a/eTools Ultimate/Resources/PatchNotes.de-DE.resx
+++ b/eTools Ultimate/Resources/PatchNotes.de-DE.resx
@@ -118,6 +118,38 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Version_0_1_0" xml:space="preserve">
-    <value>{"version":"0.1.0 (Alpha)","date":"2025-10-02","developerText":"Willkommen zur öffentlichen Alpha von eTools Ultimate! Diese frühe Version konzentriert sich auf die Kern-Editoren und eine moderne UI‑Basis. Rechne mit schnellen Änderungen und häufigen Verbesserungen, während wir euer Feedback sammeln.","imagePath":"/Assets/Icons/PersonalizationIcon.png","categories":{"added":[{"text":"Dashboard mit Schnellnavigation und lokalisierter UI","type":0},{"text":"Editoren: Movers, Motions, Giftboxes, Accessories, Texts","type":0},{"text":"suchen, hinzufügen, löschen, speichern","type":0},{"text":"Internationalisierung (Englisch, Deutsch, Französisch)","type":0},{"text":"Themen: hell, dunkel, hoher Kontrast","type":0},{"text":"Einstellungsseiten: Konfiguration, Personalisierung, Über","type":0},{"text":"Update-Checker mit GitHub-Integration","type":0}]} }</value>
+    <value>{"version":"0.1.0 (Alpha)","date":"2025-10-02","developerText":"Willkommen zur öffentlichen Alpha von eTools Ultimate! Diese frühe Version konzentriert sich auf die Kern-Editoren und eine moderne UI‑Basis. Rechne mit schnellen Änderungen und häufigen Verbesserungen, während wir euer Feedback sammeln.","categories":{"added":[{"text":"Dashboard mit Schnellnavigation und lokalisierter UI","type":0},{"text":"Editoren: Movers, Motions, Giftboxes, Accessories, Texts","type":0},{"text":"suchen, hinzufügen, löschen, speichern","type":0},{"text":"Internationalisierung (Englisch, Deutsch, Französisch)","type":0},{"text":"Themen: hell, dunkel, hoher Kontrast","type":0},{"text":"Einstellungsseiten: Konfiguration, Personalisierung, Über","type":0},{"text":"Update-Checker mit GitHub-Integration","type":0}]} }</value>
+  </data>
+  <data name="Version_0_1_1" xml:space="preserve">
+    <value>{
+  "version": "0.1.1 (Alpha)",
+  "date": "2025-10-04",
+  "developerText": "Dieses Update führt eine neue Einstellung für benutzerdefinierte Dateiformate ein und behebt einige Fehler, um die Benutzererfahrung zu verbessern. Florist-Dateien werden jetzt offiziell unterstützt!",
+  "categories": {
+    "added": [
+      {
+        "text": "Neue Einstellung: Dateiformat – ermöglicht das Festlegen benutzerdefinierter Flyff-Dateistrukturen (erste unterstützt: Florist-Dateien)",
+        "type": 0
+      }
+    ],
+    "changed": [],
+    "improved": [],
+    "fixed": [
+      {
+        "text": "Problem behoben, bei dem der Standardordner beim Auswählen einer Datei nicht beibehalten wurde",
+        "type": 3
+      },
+      {
+        "text": "Fehler behoben, bei dem einige gültige Dateien fälschlicherweise als 'falsch formatiert' markiert wurden",
+        "type": 3
+      },
+      {
+        "text": "Kleinere Korrekturen und Anpassungen in der Anzeige der Patchnotes",
+        "type": 3
+      }
+    ]
+  }
+}
+</value>
   </data>
 </root>
