--- a/eTools Ultimate/Resources/PatchNotes.fr-FR.resx
+++ b/eTools Ultimate/Resources/PatchNotes.fr-FR.resx
@@ -118,6 +118,38 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Version_0_1_0" xml:space="preserve">
-    <value>{"version":"0.1.0 (Alpha)","date":"2025-10-02","developerText":"Bienvenue dans l’Alpha publique d’eTools Ultimate ! Cette première version se concentre sur les éditeurs principaux et une base d’interface moderne. Attendez‑vous à des changements rapides et des améliorations fréquentes pendant que nous recueillons vos retours.","imagePath":"/Assets/Icons/PersonalizationIcon.png","categories":{"added":[{"text":"Tableau de bord avec navigation rapide et interface localisée","type":0},{"text":"Éditeurs : Movers, Animations, Boîtes‑cadeaux, Accessoires, Textes","type":0},{"text":"Recherche, ajout, suppression, sauvegarde","type":0},{"text":"Internationalisation (Anglais, Allemand, Français)","type":0}, {"text":"Thèmes (clair, sombre, haut contraste)"},{"text":"Pages Paramètres : Configuration, Personnalisation, À propos","type":0},{"text":"Vérificateur de mise à jour avec intégration GitHub","type":0}]} }</value>
+    <value>{"version":"0.1.0 (Alpha)","date":"2025-10-02","developerText":"Bienvenue dans l’Alpha publique d’eTools Ultimate ! Cette première version se concentre sur les éditeurs principaux et une base d’interface moderne. Attendez‑vous à des changements rapides et des améliorations fréquentes pendant que nous recueillons vos retours.","categories":{"added":[{"text":"Tableau de bord avec navigation rapide et interface localisée","type":0},{"text":"Éditeurs : Movers, Animations, Boîtes‑cadeaux, Accessoires, Textes","type":0},{"text":"Recherche, ajout, suppression, sauvegarde","type":0},{"text":"Internationalisation (Anglais, Allemand, Français)","type":0}, {"text":"Thèmes (clair, sombre, haut contraste)"},{"text":"Pages Paramètres : Configuration, Personnalisation, À propos","type":0},{"text":"Vérificateur de mise à jour avec intégration GitHub","type":0}]} }</value>
+  </data>
+  <data name="Version_0_1_1" xml:space="preserve">
+    <value>{
+  "version": "0.1.1 (Alpha)",
+  "date": "2025-10-04",
+  "developerText": "Cette mise à jour introduit un nouveau paramètre pour les formats de fichiers personnalisés et corrige plusieurs bugs afin d'améliorer l'expérience utilisateur. Les fichiers Florist sont désormais officiellement pris en charge !",
+  "categories": {
+    "added": [
+      {
+        "text": "Nouveau paramètre : Format des fichiers – permet de spécifier des structures de fichiers Flyff personnalisées (premier supporté : fichiers Florist)",
+        "type": 0
+      }
+    ],
+    "changed": [],
+    "improved": [],
+    "fixed": [
+      {
+        "text": "Correction d’un problème où le dossier par défaut n’était pas retenu lors de la sélection d’un fichier",
+        "type": 3
+      },
+      {
+        "text": "Correction d’un bug où certains fichiers valides étaient incorrectement signalés comme « mal formatés »",
+        "type": 3
+      },
+      {
+        "text": "Corrections et ajustements mineurs dans l’affichage des notes de mise à jour",
+        "type": 3
+      }
+    ]
+  }
+}
+</value>
   </data>
 </root>
