--- a/eTools Ultimate/Resources/Translations.resx
+++ b/eTools Ultimate/Resources/Translations.resx
@@ -539,4 +539,7 @@
   <data name="Files format" xml:space="preserve">
     <value />
   </data>
+  <data name="Path concerned:" xml:space="preserve">
+    <value />
+  </data>
 </root>
