--- a/eTools Ultimate/Resources/Translations.de-DE.resx
+++ b/eTools Ultimate/Resources/Translations.de-DE.resx
@@ -504,6 +504,9 @@
   <data name="Latest updates and improvements" xml:space="preserve">
     <value>Neueste Updates und Verbesserungen</value>
   </data>
+  <data name="Files format" xml:space="preserve">
+    <value>Dateiformat</value>
+  </data>
   <data name="Welcome" xml:space="preserve">
     <value>Willkommen</value>
     <comment>Welcome text on dashboard</comment>
@@ -2147,7 +2150,7 @@
   <data name="Text displayed in game" xml:space="preserve">
     <value>Im Spiel angezeigter Text</value>
   </data>
-  <data name="Files format" xml:space="preserve">
-    <value>Dateiformat</value>
+  <data name="Path concerned:" xml:space="preserve">
+    <value>Betroffener Pfad :</value>
   </data>
 </root>
