--- a/eTools Ultimate/Resources/Translations.de-DE.resx
+++ b/eTools Ultimate/Resources/Translations.de-DE.resx
@@ -507,6 +507,12 @@
   <data name="Files format" xml:space="preserve">
     <value>Dateiformat</value>
   </data>
+  <data name="Path concerned:" xml:space="preserve">
+    <value>Betroffener Pfad :</value>
+  </data>
+  <data name="The application could not find an important directory. This can happen when:" xml:space="preserve">
+    <value>Die Anwendung konnte ein wichtiges Verzeichnis nicht finden. Dies kann passieren, wenn :</value>
+  </data>
   <data name="Welcome" xml:space="preserve">
     <value>Willkommen</value>
     <comment>Welcome text on dashboard</comment>
@@ -2150,7 +2156,19 @@
   <data name="Text displayed in game" xml:space="preserve">
     <value>Im Spiel angezeigter Text</value>
   </data>
-  <data name="Path concerned:" xml:space="preserve">
-    <value>Betroffener Pfad :</value>
+  <data name="The directory path configured in the application settings is invalid." xml:space="preserve">
+    <value>Der in den Anwendungseinstellungen konfigurierte Verzeichnispfad ist ungültig.</value>
+  </data>
+  <data name="The directory has been moved or deleted." xml:space="preserve">
+    <value>Das Verzeichnis wurde verschoben oder gelöscht.</value>
+  </data>
+  <data name="There are insufficient permissions to access the directory." xml:space="preserve">
+    <value>Es sind nicht genügend Berechtigungen vorhanden, um auf das Verzeichnis zuzugreifen.</value>
+  </data>
+  <data name="A required directory was not found." xml:space="preserve">
+    <value>Ein erforderliches Verzeichnis wurde nicht gefunden.</value>
+  </data>
+  <data name="Directory not found" xml:space="preserve">
+    <value>Verzeichnis nicht gefunden</value>
   </data>
 </root>
