--- a/eTools Ultimate/Resources/Translations.resx
+++ b/eTools Ultimate/Resources/Translations.resx
@@ -542,4 +542,22 @@
   <data name="Path concerned:" xml:space="preserve">
     <value />
   </data>
+  <data name="The application could not find an important directory. This can happen when:" xml:space="preserve">
+    <value />
+  </data>
+  <data name="The directory path configured in the application settings is invalid." xml:space="preserve">
+    <value />
+  </data>
+  <data name="The directory has been moved or deleted." xml:space="preserve">
+    <value />
+  </data>
+  <data name="There are insufficient permissions to access the directory." xml:space="preserve">
+    <value />
+  </data>
+  <data name="A required directory was not found." xml:space="preserve">
+    <value />
+  </data>
+  <data name="Directory not found" xml:space="preserve">
+    <value />
+  </data>
 </root>
